@@ -30,6 +30,7 @@ rule-edit: new action "logsetting-set-FastAPI:[LOGFORWARD]"
 address-merger: extend skipped object output with DG information
 address-edit: new actions=value-host-object-add-netmask-m32
 userid-mgr: fix help / missing variable set
+register-ip-mgr: introduce new util
 
 utils(under development):
 ike: new script to show all IKE/IPsec profile and config settings
